--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="links.html">Links in a webpage</a><br><br>
             <a href="headings.html">Headings in a webpage</a><br><br>
             <a href="paragraph.html">Paragraph in a webpage</a><br><br>
-            <a href="horizontalrule.html">Horixontal rules in a webpage</a><br><br>
+            <a href="horizontalRule.html">Horizontal rules in a webpage</a><br><br>
             <a href="marquee.html">marquee tag in a webpage</a><br><br>
             <a href="div.html">Div tags in a webpage</a><br><br>
             <a href="orderedList.html">Ordered list in a webpage</a><br><br>
